--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           /></svg
       ></a>
 
-      <a href="#" class="h-10 w-10"
+      <a href="https://github.com/tylers-dad-58/wubby_fitness" class="h-10 w-10"
         ><svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <title>GitHub</title>
           <path
